@startuml

class User {
  - id: int
  - username: string
  - password: string
  - followers: List<User>
  - following: List<User>
  + signup(username: string, password: string): User
  + login(username: string, password: string): void
  + createPost(content: string): Post
  + follow(user: User): void
}

class Post {
  - id: int
  - content: string
  - upvotes: int
  - downvotes: int
  - timestamp: datetime
  - author: User
  - comments: List<Comment>
  + addComment(content: string): Comment
  + upvote(): void
  + downvote(): void
}

class Comment {
  - id: int
  - content: string
  - upvotes: int
  - downvotes: int
  - timestamp: datetime
  - author: User
  - comments: List<Comment>
  - parent: Comment
  + addComment(content: string): Comment
  + upvote(): void
  + downvote(): void
}

class System {
  - users: List<User>
  - posts: List<Post>
  - comments: List<Comment>
  + showNewsFeed(sortBy: string): List<Post>
}

User "1" *-- "*" Post
Post "1" *-- "*" Comment
Comment "0..*" -- "1" Comment : child comments
System "1" *-- "*" User
System "1" *-- "*" Post
System "1" *-- "*" Comment

@enduml